# tuidal

./: .gitignore  Cargo.toml  README.md  shell.nix  tidal.py
raycast/: README.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast/src/: api.ts  just-play.tsx  library.tsx  menu-bar-player.tsx  next.ts  now-playing.tsx  previous.ts  queue.tsx  repeat.ts  search.tsx  shuffle.ts  toggle-play-pause.ts  types.ts
src/: api.rs  app.rs  i18n.rs  main.rs  mpris.rs  player.rs  tidal.py  tidal.rs  ui.rs
