[package]
name = "tuidal"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui       = "0.29"
crossterm     = { version = "0.28", features = ["event-stream"] }
tokio         = { version = "1", features = ["full"] }
reqwest       = { version = "0.12", features = ["json"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
rodio         = "0.20"
dirs          = "5"
libc          = "0.2"
 